--- a/style.css
+++ b/style.css
@@ -4,37 +4,42 @@
   box-sizing: border-box;
 }
 body {
-  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
-  color: white;
+  background-image: linear-gradient(120deg, #ffffff 0%, #c2f8ff 100%);
+  color: black;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
 }
+
 header {
-  font-size: 2rem;
+  font-size: 12pt;
 }
 
 header,
 form {
-  min-height: 20vh;
+  min-height: 15vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+
 form input,
 form button {
   padding: 0.5rem;
-  font-size: 2rem;
-  border: none;
+  font-size: 16pt;
   background: white;
+  border: none;
 }
+
+
 form button {
-  color: #ff6f47;
+  color: #0004ff;
   background: #f7fffe;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 form button:hover {
-  background: #ff6f47;
+  background: #0004ff;
   color: white;
 }
 .todo-container {
@@ -51,7 +56,7 @@ form button:hover {
 .todo {
   margin: 0.5rem;
   background: white;
-  font-size: 1.5rem;
+  font-size: 14pt;
   color: black;
   display: flex;
   justify-content: space-between;
@@ -67,7 +72,7 @@ form button:hover {
 
 .trash-btn,
 .complete-btn {
-  background: #ff6f47;
+  background: red;
   color: white;
   border: none;
   padding: 1rem;
@@ -115,7 +120,7 @@ select {
   overflow: hidden;
 }
 select {
-  color: #ff6f47;
+  color: #000000;
   font-family: "Poppins", sans-serif;
   cursor: pointer;
   width: 12rem;
@@ -127,7 +132,7 @@ select {
   top: 0;
   right: 0;
   padding: 1rem;
-  background: #ff6f47;
+  background: #ffffff;
   cursor: pointer;
   pointer-events: none;
 }
